tests/negative/runtime/byteat_large_index/input.ci
void main() {
    print(toString(byteAt("abc", 99)) + "\n");
}
